--- a/analytics.html
+++ b/analytics.html
@@ -1,9 +1,3 @@
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7YEC2XK9GR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', {{ site.google_analytics }});
-</script>
+<div id="clustrmaps-widget">
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=LB40xbXfFS-zdRKTxOJFi3W_QhWoLtwr1A0MtNByulo&cl=ffffff&w=a"></script>
+</div>
